// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel Snapshots does not render header when side panel is closed 1`] = `
.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-4 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 64px;
  padding: 16px 0;
  left: 0px;
}

.emotion-2 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 64px;
}

<div
  aria-orientation="vertical"
  className="emotion-4 emotion-5"
  open={false}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  />
  <div
    className="emotion-2 emotion-3"
    open={false}
  />
</div>
`;

exports[`SidePanel Snapshots renders a closed side panel 1`] = `
.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-4 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 64px;
  padding: 16px 0;
  left: 0px;
}

.emotion-2 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 64px;
}

<div
  aria-orientation="vertical"
  className="emotion-4 emotion-5"
  open={false}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  />
  <div
    className="emotion-2 emotion-3"
    open={false}
  />
</div>
`;

exports[`SidePanel Snapshots renders a side panel from the right 1`] = `
.emotion-2 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-4 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

.emotion-6 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 300px;
  padding: 24px;
  right: 0px;
}

<div
  aria-orientation="vertical"
  className="emotion-6 emotion-7"
  open={true}
  role="region"
>
  <div
    className="emotion-2 emotion-3"
  >
    <h2
      className="emotion-0 emotion-1"
    >
      Side Panel Header
    </h2>
  </div>
  <div
    className="emotion-4 emotion-5"
    open={true}
  />
</div>
`;

exports[`SidePanel Snapshots renders a side panel header 1`] = `
.emotion-6 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 300px;
  padding: 24px;
  left: 0px;
}

.emotion-2 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-4 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

<div
  aria-orientation="vertical"
  className="emotion-6 emotion-7"
  open={true}
  role="region"
>
  <div
    className="emotion-2 emotion-3"
  >
    <h2
      className="emotion-0 emotion-1"
    >
      Side Panel Header
    </h2>
  </div>
  <div
    className="emotion-4 emotion-5"
    open={true}
  />
</div>
`;

exports[`SidePanel Snapshots renders a side panel with a Gray background when open 1`] = `
.emotion-2 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-4 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

.emotion-6 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: 0px;
}

<div
  aria-orientation="vertical"
  className="emotion-6 emotion-7"
  open={true}
  role="region"
>
  <div
    className="emotion-2 emotion-3"
  >
    <h2
      className="emotion-0 emotion-1"
    >
      Side Panel Header
    </h2>
  </div>
  <div
    className="emotion-4 emotion-5"
    open={true}
  />
</div>
`;

exports[`SidePanel Snapshots renders a side panel with children elements 1`] = `
.emotion-4 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 300px;
  padding: 24px;
  left: 0px;
}

.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-2 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

<div
  aria-orientation="vertical"
  className="emotion-4 emotion-5"
  open={true}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  >
    <ul>
      <li>
        Home
      </li>
      <li>
        Favorites
      </li>
      <li>
        Recents
      </li>
      <li>
        Trash
      </li>
    </ul>
  </div>
  <div
    className="emotion-2 emotion-3"
    open={true}
  />
</div>
`;

exports[`SidePanel Snapshots renders a toggle button 1`] = `
.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-8 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 64px;
  padding: 16px 0;
  left: 0px;
}

.emotion-6 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 64px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 32px;
  height: 32px;
  position: absolute;
  bottom: 16px;
  right: 16px;
  left: px;
}

.emotion-4:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-4:disabled,
.emotion-4:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-4 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 span .wd-icon-fill,
.emotion-4 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover:focus {
  background-color: #dfe2e6;
}

.emotion-4:active,
.emotion-4:focus:active,
.emotion-4:hover:active {
  background-color: #ced3d9;
}

.emotion-4:hover {
  background-color: #dfe2e6;
}

.emotion-4:hover span .wd-icon-fill,
.emotion-4:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-4:disabled,
.emotion-4:active:disabled,
.emotion-4:focus:disabled,
.emotion-4:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-4:disabled span .wd-icon-fill,
.emotion-4:active:disabled span .wd-icon-fill,
.emotion-4:focus:disabled span .wd-icon-fill,
.emotion-4:hover:disabled span .wd-icon-fill,
.emotion-4:disabled span .wd-icon-accent,
.emotion-4:active:disabled span .wd-icon-accent,
.emotion-4:focus:disabled span .wd-icon-accent,
.emotion-4:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-4:not([disabled]):focus {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4 span svg {
  width: 20px;
  height: 20px;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

<div
  aria-orientation="vertical"
  className="emotion-8 emotion-9"
  open={false}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  />
  <div
    className="emotion-6 emotion-7"
    open={false}
  >
    <button
      aria-label="show navigation"
      aria-pressed={false}
      className="emotion-3 emotion-4 emotion-5"
      onClick={[Function]}
    >
      <span
        className="emotion-2"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-chevron-right wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.108 13.098l.748-.748a.493.493 0 0 0 .001-.7L9.346 3.142a.499.499 0 0 0-.701.002l-.748.747a.493.493 0 0 0-.002.7L15.305 12l-7.41 7.406a.498.498 0 0 0 .002.7l.748.749a.494.494 0 0 0 .7 0l7.763-7.756z\\" class=\\"wd-icon-fill\\"/></g></svg>",
          }
        }
      />
    </button>
  </div>
</div>
`;

exports[`SidePanel Snapshots renders as expected 1`] = `
.emotion-4 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 300px;
  padding: 24px;
  left: 0px;
}

.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-2 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

<div
  aria-orientation="vertical"
  className="emotion-4 emotion-5"
  open={true}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  />
  <div
    className="emotion-2 emotion-3"
    open={true}
  />
</div>
`;

exports[`SidePanel Snapshots renders side panel on the left 1`] = `
.emotion-6 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 300px;
  padding: 24px;
  left: 0px;
}

.emotion-2 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-4 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

<div
  aria-orientation="vertical"
  className="emotion-6 emotion-7"
  open={true}
  role="region"
>
  <div
    className="emotion-2 emotion-3"
  >
    <h2
      className="emotion-0 emotion-1"
    >
      Side Panel Header
    </h2>
  </div>
  <div
    className="emotion-4 emotion-5"
    open={true}
  />
</div>
`;

exports[`SidePanel Snapshots renders side panel on the right with correct toggle button when panel is closed 1`] = `
.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-6 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 64px;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-8 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 64px;
  padding: 16px 0;
  right: 0px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 32px;
  height: 32px;
  position: absolute;
  bottom: 16px;
  right: px;
  left: 16px;
}

.emotion-4:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-4:disabled,
.emotion-4:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-4 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 span .wd-icon-fill,
.emotion-4 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover:focus {
  background-color: #dfe2e6;
}

.emotion-4:active,
.emotion-4:focus:active,
.emotion-4:hover:active {
  background-color: #ced3d9;
}

.emotion-4:hover {
  background-color: #dfe2e6;
}

.emotion-4:hover span .wd-icon-fill,
.emotion-4:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-4:disabled,
.emotion-4:active:disabled,
.emotion-4:focus:disabled,
.emotion-4:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-4:disabled span .wd-icon-fill,
.emotion-4:active:disabled span .wd-icon-fill,
.emotion-4:focus:disabled span .wd-icon-fill,
.emotion-4:hover:disabled span .wd-icon-fill,
.emotion-4:disabled span .wd-icon-accent,
.emotion-4:active:disabled span .wd-icon-accent,
.emotion-4:focus:disabled span .wd-icon-accent,
.emotion-4:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-4:not([disabled]):focus {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4 span svg {
  width: 20px;
  height: 20px;
}

<div
  aria-orientation="vertical"
  className="emotion-8 emotion-9"
  open={false}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  />
  <div
    className="emotion-6 emotion-7"
    open={false}
  >
    <button
      aria-label="show navigation"
      aria-pressed={false}
      className="emotion-3 emotion-4 emotion-5"
      onClick={[Function]}
    >
      <span
        className="emotion-2"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-chevron-left wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M6.895 13.098l-.748-.748a.493.493 0 0 1-.002-.7l8.512-8.507a.499.499 0 0 1 .7.002l.749.747a.493.493 0 0 1 .001.7L8.697 12l7.41 7.406c.19.19.193.507-.001.7l-.748.749a.494.494 0 0 1-.701 0l-7.762-7.756z\\" class=\\"wd-icon-fill\\"/></g></svg>",
          }
        }
      />
    </button>
  </div>
</div>
`;

exports[`SidePanel Snapshots renders side panel on the right with correct toggle button when panel is open 1`] = `
.emotion-2 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-8 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

.emotion-10 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 300px;
  padding: 24px;
  right: 0px;
}

.emotion-4 {
  display: inline-block;
}

.emotion-4 svg {
  display: block;
}

.emotion-4 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-4:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-4 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-4 .wd-icon-background {
  fill: transparent;
}

.emotion-4:hover .wd-icon-background {
  fill: transparent;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 32px;
  height: 32px;
  position: absolute;
  bottom: 16px;
  right: px;
  left: 16px;
}

.emotion-6:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-6:disabled,
.emotion-6:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-6 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-6 span .wd-icon-fill,
.emotion-6 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-6:focus span .wd-icon-fill,
.emotion-6:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-6:hover:focus {
  background-color: #dfe2e6;
}

.emotion-6:active,
.emotion-6:focus:active,
.emotion-6:hover:active {
  background-color: #ced3d9;
}

.emotion-6:hover {
  background-color: #dfe2e6;
}

.emotion-6:hover span .wd-icon-fill,
.emotion-6:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-6:disabled,
.emotion-6:active:disabled,
.emotion-6:focus:disabled,
.emotion-6:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-6:disabled span .wd-icon-fill,
.emotion-6:active:disabled span .wd-icon-fill,
.emotion-6:focus:disabled span .wd-icon-fill,
.emotion-6:hover:disabled span .wd-icon-fill,
.emotion-6:disabled span .wd-icon-accent,
.emotion-6:active:disabled span .wd-icon-accent,
.emotion-6:focus:disabled span .wd-icon-accent,
.emotion-6:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-6:not([disabled]):focus {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-6:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-6 span svg {
  width: 20px;
  height: 20px;
}

<div
  aria-orientation="vertical"
  className="emotion-10 emotion-11"
  open={true}
  role="region"
>
  <div
    className="emotion-2 emotion-3"
  >
    <h2
      className="emotion-0 emotion-1"
    >
      Side Panel Header
    </h2>
  </div>
  <div
    className="emotion-8 emotion-9"
    open={true}
  >
    <button
      aria-label="hide navigation"
      aria-pressed={false}
      className="emotion-5 emotion-6 emotion-7"
      onClick={[Function]}
    >
      <span
        className="emotion-4"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-chevron-right wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.108 13.098l.748-.748a.493.493 0 0 0 .001-.7L9.346 3.142a.499.499 0 0 0-.701.002l-.748.747a.493.493 0 0 0-.002.7L15.305 12l-7.41 7.406a.498.498 0 0 0 .002.7l.748.749a.494.494 0 0 0 .7 0l7.763-7.756z\\" class=\\"wd-icon-fill\\"/></g></svg>",
          }
        }
      />
    </button>
  </div>
</div>
`;

exports[`SidePanel Snapshots renders side panel with a different width 1`] = `
.emotion-4 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 900px;
  padding: 24px;
  left: 0px;
}

.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 900px;
}

.emotion-2 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 900px;
}

<div
  aria-orientation="vertical"
  className="emotion-4 emotion-5"
  open={true}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  />
  <div
    className="emotion-2 emotion-3"
    open={true}
  />
</div>
`;

exports[`SidePanel Snapshots renders standard side panel 1`] = `
.emotion-4 {
  overflow: hidden;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 200ms ease;
  transition: width 200ms ease;
  position: absolute;
  background-color: #ffffff;
  width: 300px;
  padding: 24px;
  left: 0px;
}

.emotion-0 {
  -webkit-transition: none;
  transition: none;
  z-index: 1;
  width: 300px;
}

.emotion-2 {
  position: absolute;
  bottom: 0px;
  height: 120px;
  left: 0;
  background: linear-gradient(180deg,rgba(255,255,255,0.0001) 0%,#FFFFFF 100%);
  width: 300px;
}

<div
  aria-orientation="vertical"
  className="emotion-4 emotion-5"
  open={true}
  role="region"
>
  <div
    className="emotion-0 emotion-1"
  />
  <div
    className="emotion-2 emotion-3"
    open={true}
  />
</div>
`;
